--- a/src/components/AuthPage/AuthPage.module.css
+++ b/src/components/AuthPage/AuthPage.module.css
@@ -1,72 +1,130 @@
-html, body {
-    background-image: url("./../../Stylesheets/backgraund-img.png");
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-color: rgba(83, 104, 113, 0.73);
-    /*background: linear-gradient(127deg, #5F9FEB, rgba(175, 58, 231, 0.6));*/
-}
-
 .container_md {
-    padding: 40px 80px;
+    padding: 3% 10%;
     margin: 5% auto;
-    width: 50%;
+    width: 40%;
+    max-width: 100%;
     border-radius: 17px;
     background-color: white;
 }
 
+.form{
+}
+
 .logLink {
     display: block;
-    font-family: Roboto Condensed, sans-serif;
-    margin: 0 auto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 28px;
+    font-family: "Montserrat", sans-serif;
+    /*margin: 0 auto;*/
+    /*font-style: normal;*/
+    font-weight: normal;
+    font-size: 1.1em;
     text-decoration: none;
     color: rgba(132, 132, 132, 0.52);
     text-align: center;
 }
 
+/*.logLink:hover {*/
+/*    color: rgba(132, 132, 132, 0.52);*/
+/*}*/
+
+/*.logLink:focus {*/
+/*    color: rgba(132, 132, 132, 0.52);*/
+/*}*/
+
 .logLink:hover {
-    color: rgba(132, 132, 132, 0.52);
-}
-
-.logLink:focus {
-    color: rgba(132, 132, 132, 0.52);
-}
-
-a:hover {
-    color: rgba(175, 175, 175, 0.52);
+    color: rgba(97, 97, 97, 0.52);
 }
 
 h1 {
-    margin-bottom: 40px;
+    margin-bottom: 7%;
     text-transform: uppercase;
 }
 
 .text {
     font-stretch: condensed;
-    font-family: Roboto, sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 30px;
-    line-height: 35px;
+    font-size: 1.4em;
     color: #000000;
     text-align: center;
 }
 
 .btn {
     display: block;
-    margin: 30px auto;
-    width: fit-content;
-    background: #EF5B5B;
-    border-radius: 17px;
+    margin: 1% auto;
+    font-family: "Open Sans", sans-serif;
+    font-weight: normal;
+    font-size: 1.1em;
+    padding: 8px;
+    width: 50%;
+    background: #FBCB84;
+    border-radius: 20px;
     border-color: transparent;
     color: white;
 }
 
-.btn:focus, .btn:hover {
-    background-color: #f56464;
+.btn:hover {
+    outline: none;
+    background-color: #F18A93;
+
+    box-shadow: 0 0 5px rgba(78, 78, 78, 0.5);
     border-color: transparent;
+}
+
+@media all and (max-width: 1500px){
+    .container_md {
+        width: 50%;
+        margin: 2% auto;
+    }
+}
+@media all and (max-width: 1200px){
+    .container_md {
+        width: 60%;
+        margin: 3% auto;
+    }
+}
+@media all and (max-width: 992px){
+    .container_md {
+        width: 70%;
+        margin: 16% auto;
+    }
+    .logLink {
+        font-size: 1.2em;
+    }
+    .text {
+        font-size: 1.2em;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .container_md {
+        width: 80%;
+        margin: 16% auto;
+    }
+    .btn{
+        width: 90%;
+    }
+    .logLink {
+        font-size: 1.2em;
+    }
+    .text {
+        font-size: 1.2em;
+    }
+}
+
+@media all and (max-width: 480px) {
+    .container_md {
+        width: 100%;
+        padding: 7% 4%;
+        margin: 10% auto;
+    }
+    .btn{
+        width: 90%;
+    }
+    .logLink {
+        font-size: 1.1em;
+    }
+    .text {
+        font-size: 1.1em;
+    }
 }
