--- a/src/components/AuthPage/AuthPage.module.css
+++ b/src/components/AuthPage/AuthPage.module.css
@@ -70,6 +70,10 @@ h1 {
     box-shadow: 0 0 5px rgba(78, 78, 78, 0.5);
     border-color: transparent;
 }
+/*тестовые стили для неактивной кнопки*/
+.btn:disabled {
+    background-color: gray;
+}
 
 @media all and (max-width: 1500px){
     .container_md {
