--- a/src/components/AuthPage/AuthPage.module.css
+++ b/src/components/AuthPage/AuthPage.module.css
@@ -1,5 +1,5 @@
 .container_md {
-    padding: 3% 10%;
+    padding: 50px 80px;
     margin: 5% auto;
     width: 40%;
     max-width: 100%;
@@ -7,14 +7,9 @@
     background-color: white;
 }
 
-.form{
-}
-
 .logLink {
     display: block;
     font-family: "Montserrat", sans-serif;
-    /*margin: 0 auto;*/
-    /*font-style: normal;*/
     font-weight: normal;
     font-size: 1.1em;
     text-decoration: none;
@@ -22,13 +17,6 @@
     text-align: center;
 }
 
-/*.logLink:hover {*/
-/*    color: rgba(132, 132, 132, 0.52);*/
-/*}*/
-
-/*.logLink:focus {*/
-/*    color: rgba(132, 132, 132, 0.52);*/
-/*}*/
 
 .logLink:hover {
     color: rgba(97, 97, 97, 0.52);
@@ -49,6 +37,11 @@ h1 {
     text-align: center;
 }
 
+.invalidFeedback {
+    display: block;
+    text-align: center;
+}
+
 .btn {
     display: block;
     margin: 1% auto;
@@ -56,7 +49,7 @@ h1 {
     font-weight: normal;
     font-size: 1.1em;
     padding: 8px;
-    width: 50%;
+    width: 60%;
     background: #FBCB84;
     border-radius: 20px;
     border-color: transparent;
@@ -77,20 +70,26 @@ h1 {
 
 @media all and (max-width: 1500px){
     .container_md {
-        width: 50%;
+        width: 45%;
         margin: 2% auto;
+    }
+    .btn {
+        width: 55%;
     }
 }
 @media all and (max-width: 1200px){
     .container_md {
-        width: 60%;
+        width: 50%;
         margin: 3% auto;
+    }
+    .btn {
+        width: 65%;
     }
 }
 @media all and (max-width: 992px){
     .container_md {
         width: 70%;
-        margin: 16% auto;
+        margin: 5% auto;
     }
     .logLink {
         font-size: 1.2em;
@@ -103,10 +102,11 @@ h1 {
 @media all and (max-width: 768px) {
     .container_md {
         width: 80%;
-        margin: 16% auto;
+        margin: 5% auto;
+        padding: 10px 20px;
     }
     .btn{
-        width: 90%;
+        width: 60%;
     }
     .logLink {
         font-size: 1.2em;
