--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -26,7 +26,7 @@
     margin: 0 auto;
     padding: 20px;
     border-radius: 17px;
-    width: 60%;
+    width: 40%;
     background-color: white;
 }
 
@@ -86,18 +86,28 @@
     border: 2px solid #3d3a3a;
 }
 
+.buttons{
+    display: flex;
+    justify-content: center;
+}
+
+.invalidFeedback {
+    display: block;
+    text-align: center;
+}
+
 .btn {
     display: inline-block;
     margin: 20px 20px;
     font-family: "Open Sans", sans-serif;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 1.1em;
     padding: 8px;
     width: 30%;
     background: #FBCB84;
     border-radius: 20px;
     border-color: transparent;
-    color: white;
+    color: black;
 }
 
 .btn:hover {
@@ -105,4 +115,67 @@
     background-color: #F18A93;
     box-shadow: 0 0 5px rgba(78, 78, 78, 0.5);
     border-color: transparent;
+}
+
+@media all and (max-width: 1500px){
+    .userInformation {
+        width: 60%;
+        margin: 3% auto;
+    }
+    .btn {
+        width: 30%;
+    }
+    .form {
+        margin: 40px 120px;
+    }
+}
+
+@media all and (max-width: 1200px){
+    .userInformation {
+        width: 65%;
+        margin: 3% auto;
+    }
+    .btn {
+        width: 30%;
+    }
+    .form {
+        margin: 20px 90px;
+    }
+}
+@media all and (max-width: 992px){
+    .userInformation {
+        width: 75%;
+        margin: 5% auto;
+    }
+    .text {
+        font-size: 1.2em;
+    }
+    .form {
+        margin: 25px 70px;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .userInformation {
+        width: 80%;
+        margin: 5% auto;
+        padding: 10px 20px;
+    }
+    .btn{
+        width: 30%;
+    }
+    .form {
+        margin: 20px 10px;
+    }
+}
+
+@media all and (max-width: 480px) {
+    .userInformation {
+        width: 100%;
+        padding: 7% 4%;
+        margin: 10% auto;
+    }
+    .btn{
+        width: 30%;
+    }
 }
