--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
 body, html{
-    margin: 0;
-    padding: 0;
-}
-
-.wrapper {
-    background-image: url("./Stylesheets/backgraund-img.png");
+    background-image: url("Stylesheets/background-img.png");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-color: rgba(83, 104, 113, 0.73);
+}
+
+.wrapper {
+    /*background-image: url("./Stylesheets/background-img.png");*/
+    /*background-size: cover;*/
+    /*background-attachment: fixed;*/
+    /*background-repeat: no-repeat;*/
+    /*background-color: rgba(83, 104, 113, 0.73);*/
     /*background: linear-gradient(127.23deg, #F18A93 16.46%, rgba(248, 169, 50, 0.6) 86.03%);*/
     /*mix-blend-mode: normal;*/
     /*height: 100%;*/
