--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -1,16 +1,60 @@
-.wrapper {
-
-}
-
 .user {
     margin: 60px auto;
 }
-
-.userPhoto {
-    /*filter: invert(100%);*/
+.avatar {
     display: block;
     width: 127px;
+    height: 127px;
     margin: 0 auto;
+    border-radius: 50%;
+}
+
+.userAvatar {
+    border: 5px solid white;
+    display: block;
+    object-fit: cover;
+}
+
+.hide {
+    position: absolute;
+    overflow: hidden;
+    z-index: -1;
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+}
+
+.uploadAvatar {
+    display: inline-block;
+    cursor: pointer;
+    background-color: #F18A93;
+    padding: 8px;
+    margin: 20px;
+    text-align: center;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1em;
+    border-radius: 17px;
+}
+
+.btnAvatar {
+    margin: 10px;
+    border: none;
+    background-color: transparent;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 25px;
+    height: auto;
+    padding: 0;
+}
+
+.btnUpload {
+    background-image: url("../../Stylesheets/upload.svg");
+}
+
+.btnDelete {
+    background-image: url("../../Stylesheets/delete.svg");
 }
 
 .userName {
@@ -35,11 +79,13 @@
     margin: 0 auto;
     width: 60%;
     padding-bottom: 0;
+    border-color: transparent;
 }
 
 .switch {
     display: inline-block;
     background-color: #D9D9D9;
+    border-color: transparent;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     height: 45px;
@@ -103,6 +149,7 @@
     display: inline-block;
     margin: 20px 20px;
     font-family: "Open Sans", sans-serif;
+    text-align: center;
     font-weight: bold;
     font-size: 1.1em;
     padding: 8px;
@@ -173,7 +220,10 @@
         width: 100%;
         padding: 7% 4%;
     }
-    .btn{
-        width: 30%;
+    .btn {
+        width: 40%;
+        margin: 10px;
+        padding: 5px;
+        font-size: 0.9em;
     }
 }
