--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,25 +1,26 @@
-.header {
-    margin-top: 1%;
-}
-
 .nav {
     display: flex;
     width: 100%;
-    flex-wrap: wrap;
     justify-content: center;
-    /*position: fixed;*/
-    z-index: 10;
-    top: 0;
-    left: 0;
-    right: 0;
 }
+
+.headerWrapper {
+    width: 1400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    height: 100px;
+    display: block;
+    margin-right: auto;
+}
+
 .navLink {
-    display: inline;
     text-decoration: none;
-    /*margin: 20px;*/
     padding: 20px;
     text-align: center;
-    width: 180px;
     margin: 0 1%;
     color: white;
     font-family: "Open Sans", sans-serif;
@@ -27,15 +28,62 @@
     font-weight: bold;
     font-size: 1.2em;
     transition: all .15s;
-    border-bottom: 2px solid transparent;
     background-position: center;
 }
+
+.navLink:last-child:not(:first-child) {
+    margin-left: auto;
+    width: 130px;
+}
+
+.dropDown .navLink {
+    margin: 0;
+    background-position: center;
+}
+
+.dropDown:hover .navLink {
+    margin: 0;
+    background-image: url('./../../Stylesheets/menu_hover.svg');
+    background-repeat: no-repeat;
+    color: #F56464;
+    background-size: 130px;
+    background-position: center;
+    cursor: pointer;
+}
+
+.dropDownMenu {
+    position: absolute;
+    background-color: rgba(80, 80, 80, 0.59);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 205px;
+    text-align: center;
+}
+
+.dropDownMenu .dropDownItem {
+    display: block;
+    text-decoration: none;
+    padding: 20px;
+    color: white;
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 1.2em;
+    transition: all .15s;
+}
+
+.dropDownMenu .dropDownItem:hover {
+    color: #F56464;
+    cursor: pointer;
+}
+
 .navLink:hover {
     background-image: url('./../../Stylesheets/menu_hover.svg');
     background-repeat: no-repeat;
     color: #F56464;
     background-size: 130px;
     background-position: center;
+    cursor: pointer;
 }
 
 a.active {
