--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,19 +2,21 @@
     display: flex;
     width: 100%;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .headerWrapper {
     width: 1400px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .logo {
     height: 100px;
     display: block;
     margin-right: auto;
+    margin-top: -20px;
 }
 
 .navLink {
@@ -29,20 +31,14 @@
     font-size: 1.2em;
     transition: all .15s;
     background-position: center;
+    min-width: 130px;
 }
 
 .navLink:last-child:not(:first-child) {
     margin-left: auto;
-    width: 130px;
 }
 
-.dropDown .navLink {
-    margin: 0;
-    background-position: center;
-}
-
-.dropDown:hover .navLink {
-    margin: 0;
+.navLink:hover {
     background-image: url('./../../Stylesheets/menu_hover.svg');
     background-repeat: no-repeat;
     color: #F56464;
@@ -51,20 +47,43 @@
     cursor: pointer;
 }
 
+.dropDown {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dropDown .navLink {
+    background-image: none;
+    width: 210px;
+}
+
+.dropDown:hover {
+    background-color: white;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    /*padding: 12px 9px 0 9px;*/
+}
+
+.dropDown:hover .navLink {
+    color: #F56464 !important;
+}
+
 .dropDownMenu {
     position: absolute;
-    background-color: rgba(80, 80, 80, 0.59);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    width: 205px;
+    top: 69px;
+    width: 210px;
+    background-color: white;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
     text-align: center;
 }
 
 .dropDownMenu .dropDownItem {
     display: block;
     text-decoration: none;
-    padding: 20px;
-    color: white;
+    padding: 10px;
+    color: black;
     font-family: "Open Sans", sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -74,15 +93,6 @@
 
 .dropDownMenu .dropDownItem:hover {
     color: #F56464;
-    cursor: pointer;
-}
-
-.navLink:hover {
-    background-image: url('./../../Stylesheets/menu_hover.svg');
-    background-repeat: no-repeat;
-    color: #F56464;
-    background-size: 130px;
-    background-position: center;
     cursor: pointer;
 }
 
