Верстка главной страницы

--- a/src/admin/AdminProfile/BlackListUsers/BlackList.module.css
+++ b/src/admin/AdminProfile/BlackListUsers/BlackList.module.css
@@ -10,7 +10,7 @@
 }
 
 .btnUnblock {
-    background-image: url("../../../Stylesheets/unblock.png");
+    background-image: url("../../../assets/img/profile/unblock.png");
 }
 
 .unblockedUser {
