--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -38,7 +38,7 @@
 .prevPage, .nextPage {
     background-color: #E2E2E2;
     border-radius: 50%;
-    background-image: url("../../Stylesheets/arrow.png");
+    background-image: url("../../assets/img/profile/arrow.png");
     width: 45px;
     height: 45px;
     background-position-x: -2px;
