--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 * {
     font-family: "Open Sans", sans-serif;
 }
+
+body {
+    background-image: url("assets/img/background-img.png");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: rgba(83, 104, 113, 0.73);
+}
