--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -1,8 +1,9 @@
 .pagination {
     display: grid;
-    grid-template-columns: 45px 350px 45px;
+    grid-template-columns: 45px 1fr 45px;
     column-gap: 4px;
     font-size: 18px;
+    align-items: center;
 }
 
 .pages {
@@ -20,6 +21,8 @@
     justify-content: center;
     align-items: center;
     padding: 0 5px;
+    width: 35px;
+    height: 35px;
 }
 
 .page:not(.current):hover {
