--- a/src/components/CreateFragment/FragmentTitle/FragmentTitle.module.css
+++ b/src/components/CreateFragment/FragmentTitle/FragmentTitle.module.css
@@ -4,6 +4,7 @@
     font-style: normal;
     font-size: 22px;
     line-height: 30px;
+    margin-bottom: 35px;
 }
 
 .preTitle {
@@ -19,6 +20,13 @@
     padding: 5px 10px;
     box-sizing: border-box;
     width: 100%;
-    margin-bottom: 35px;
     border: none;
+}
+
+.titleError {
+    background-color: white;
+    border-radius: 10px;
+    color: #F56464;
+    text-align: center;
+    margin-top: 5px;
 }
