Главная страница (без карусели)

--- a/src/components/MainPage/AboutBlock/AboutBlock.module.css
+++ b/src/components/MainPage/AboutBlock/AboutBlock.module.css
@@ -1,4 +1,4 @@
-.stepsBlockWrapper {
+.aboutBlock {
     width: 1200px;
     margin: 0 auto 100px;
 }
@@ -13,8 +13,9 @@
     margin-bottom: 35px;
 }
 
-.steps {
-    display: grid;
-    grid-gap: 45px;
-    justify-content: center;
+.text {
+    padding: 0 30px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    color: black;
 }
