--- a/src/components/MainPage/StepsBlock/Step/Step.module.css
+++ b/src/components/MainPage/StepsBlock/Step/Step.module.css
@@ -27,10 +27,10 @@
 }
 
 .text {
-    font-family: Bebas Neue, sans-serif;
+    font-family: Montserrat, sans-serif;
     grid-area: text;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     color: #000000;
