Вывод фрагментов на страницу "Мои фрагменты"

--- a/src/components/MyFragments/SearchBlock/SearchBlock.module.css
+++ b/src/components/MyFragments/SearchBlock/SearchBlock.module.css
@@ -1,9 +1,14 @@
+.searchBlock {
+    margin-bottom: 40px;
+}
+
 .title {
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
     line-height: 33px;
     color: white;
+    margin-bottom: 15px;
 }
 
 .totalCount {
@@ -11,13 +16,46 @@
 }
 
 .inputBlock {
-
+    display: flex;
 }
 
-.searchInputBlock {
-    border: 1px solid white;
-}
+/*.searchInputBlock {*/
+/*    border: 1px solid white;*/
+/*}*/
 
 .searchInput {
     border: none;
+    background: #C4C4C4;
+    border-radius: 10px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 33px;
+    padding: 8px 15px;
+    box-sizing: border-box;
+    min-width: 350px;
+    margin-right: 35px;
+    color: white;
+}
+
+.searchInput::placeholder {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 33px;
+    color: rgba(255, 255, 255, 0.45);
+}
+
+.typeSelect {
+    border: none;
+    background: #C4C4C4;
+    border-radius: 10px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 33px;
+    padding: 8px 23px;
+    box-sizing: border-box;
+    color: white;
+    min-width: 250px;
 }
