Отправка контента созданной статьи

--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -21,7 +21,7 @@
 
 .buttonsBlock {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 900px;
     margin: 0 auto;
 }
