Редактирование статьи, удаление статьи, поиск статей, немного поправлена верстка

--- a/src/components/MyFragments/FragmentsList/FragmentsList.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentsList.module.css
@@ -8,3 +8,19 @@
     margin: 0 auto 65px;
     width: fit-content;
 }
+
+.noFragments {
+    background-color: white;
+    color: #F56464;
+    text-align: center;
+    margin: 0 auto;
+    width: fit-content;
+    padding: 50px 100px;
+    border-radius: 10px;
+    font-size: 32px;
+}
+
+.sadSmile {
+    cursor: default;
+    transform: rotate(90deg);
+}
