--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -6,10 +6,12 @@
     box-sizing: border-box;
     width: fit-content;
     text-decoration: none;
+    transition: 0.5s;
 }
 
 .fragmentCard:hover {
-    margin-top: -10px;
+    transform: translateY(-10px);
+    box-shadow: 0 10px 10px 0 #F56464;
 }
 
 .preview {
