--- a/src/components/Pagination/Pagination.module.css
+++ b/src/components/Pagination/Pagination.module.css
@@ -23,11 +23,12 @@
     padding: 0 5px;
     width: 35px;
     height: 35px;
+    transition: 0.5s;
 }
 
 .page:not(.current):hover {
     cursor: pointer;
-    margin-top: -5px;
+    transform: translateY(-5px);
     border-bottom: 3px solid #F56464;
 }
 
@@ -36,6 +37,7 @@
     background-color: rgba(251, 203, 132, 0.79);
     border-radius: 50%;
     padding: 2px 10px;
+    transition: 0.5s;
 }
 
 .prevPage, .nextPage {
@@ -45,15 +47,20 @@
     width: 45px;
     height: 45px;
     background-position-x: -2px;
+    transition: 0.5s;
 }
 
 .nextPage {
     transform: rotate(180deg);
 }
 
-.nextPage:hover,
+.nextPage:hover {
+    cursor: pointer;
+    transform: translateY(-5px) rotate(180deg);
+}
+
 .prevPage:hover,
 .page.current:hover {
     cursor: pointer;
-    margin-top: -5px;
+    transform: translateY(-5px);
 }
