--- a/src/components/Fragment/Fragment.module.css
+++ b/src/components/Fragment/Fragment.module.css
@@ -4,10 +4,22 @@
 }
 
 .name {
-    font-family: "Open Sans",sans-serif;
     font-weight: 700;
     font-size: 30px;
     color: white;
+    margin: 60px 0;
+}
+
+.fragmentTitle {
+    display: block;
+    background: rgba(255, 255, 255, 0.69);
+    border-radius: 10px;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    width: 100%;
+    border: none;
+    font-weight: 700;
+    font-size: 30px;
     margin: 60px 0;
 }
 
@@ -16,14 +28,14 @@
     padding: 40px 70px;
     background-color: white;
     border-radius: 9px;
-    margin: 0 auto 50px;
+    margin: 0 auto;
 }
 
 .buttonsBlock {
     display: flex;
     justify-content: space-around;
     width: 900px;
-    margin: 0 auto;
+    margin: 50px auto 0;
 }
 
 .btn {
