--- a/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
+++ b/src/components/MyFragments/FragmentsList/FragmentCard/FragmentCard.module.css
@@ -5,11 +5,14 @@
     padding: 20px 25px;
     box-sizing: border-box;
     width: fit-content;
+    max-width: 364px;
     text-decoration: none;
     transition: 0.5s;
+    color: black;
 }
 
 .fragmentCard:hover {
+    color: black;
     transform: translateY(-10px);
     box-shadow: 0 10px 10px 0 #F56464;
 }
@@ -43,6 +46,15 @@
     font-size: 24px;
     line-height: 29px;
     color: #000000;
-    max-width: 250px;
+    max-width: 200px;
     word-wrap: break-word;
+}
+
+.typeBlock {
+    display: flex;
+    align-items: center;
+}
+
+.fragmentType {
+    margin-left: 5px;
 }
