--- a/src/components/CreateTest/Task/Task.module.css
+++ b/src/components/CreateTest/Task/Task.module.css
@@ -3,8 +3,9 @@
     grid-template-areas:
     "task select"
     "answer answer";
-    grid-template-columns: 600px 400px;
+    grid-template-columns: 70% 30%;
     grid-template-rows: 30px 1fr;
+    justify-content: center;
     grid-gap: 30px;
     width: 100%;
     height: 240px;
@@ -92,4 +93,29 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("./../../../assets/img/fragments/plus.svg");
+}
+
+@media all and (max-width: 992px) {
+    .testWrapper {
+        grid-template-areas:
+        "task"
+        "select"
+        "answer";
+        grid-template-columns: 70%;
+        grid-template-rows: 30px 30px 1fr;
+        justify-content: start;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .testWrapper {
+        padding: 20px;
+        grid-template-areas:
+        "task"
+        "select"
+        "answer";
+        grid-template-columns: 100%;
+        grid-template-rows: 30px 30px 1fr;
+        justify-content: start;
+    }
 }
