--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -91,6 +91,7 @@
 .switches {
     display: flex;
     justify-content: center;
+    align-items: flex-end;
     margin: 0 auto;
     width: 60%;
     padding-bottom: 0;
@@ -103,7 +104,6 @@
     border-color: transparent;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
-    height: 45px;
     width: 210px;
     margin: 0 10px;
     padding: 10px 0;
